--- a/templates/includes/sidebar.html
+++ b/templates/includes/sidebar.html
@@ -4,7 +4,7 @@
         <section>
             <div>
                 <ul class="hoverlist">
-                    <a href="{% url 'dashboard' %}">
+                    <a href="{% url 'home' %}">
                         <span class="font-bold text-sm">Dashboard</span>
                     </a>
                 </ul>
