--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -22,5 +22,24 @@
         </div>
     </div>
 
+    <div class="text-center pb-5 pt-20">
+        <h2>Inventory Report</h2>
+        <table class="table-auto w-full border-collapse border border-gray-300">
+            <thead>
+                <tr>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Staff Name</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Item Name</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Request Status</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td class="border border-gray-300 px-4 py-2"> {{staff.first_name}} </td>
+                    <td class="border border-gray-300 px-4 py-2"> {{item.name}} </td>
+                    <td class="border border-gray-300 px-4 py-2"> {{item_request.request_status}} </td>
+                </tr>
+            </tbody>
+        </table>
+    </div>
 </div>
 {% endblock content %}
