--- a/templates/base.html
+++ b/templates/base.html
@@ -100,7 +100,7 @@
         }
 
         .statcard {
-            background-color: rgba(28, 27, 44, 0.158);
+            background-color: rgb(67, 115, 8);
             display: flex;
             flex-direction: column;
             text-align: center;
@@ -119,7 +119,10 @@
             padding: 20px;
         }
         .statcard >p {
-            padding: 20px;
+            padding: 30px;
+            border-radius: 8%;
+            background-color: rgb(15, 8, 119);
+            color: white;
         }
 
         /* .hoverlist > * {
