--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -1,11 +1,14 @@
 {% load static %}
 <header x-data="{ mobilenavOpen: false }" class="md:flex items-center justify-between [&>*]:px-8 h-20 text-white sticky top-0 z-40" style="background-color: rgb(6, 2, 63)">
     <div class="flex items-center justify-between h-20">
-        <logo>
+        <div class="flex flex-row items-center">
+            <div class="pr-20" style="width: 150px;">
+                <img src="{% static 'images/inventory_logo.png' %}" alt="Inventory Logo">
+            </div>
             <a class="flex items-center gap-1" href="/">
                 <span class="text-lg font-bold"><h2>Inventory Management System</h2></span>
             </a>
-        </logo>
+        </div>
         <mobileicon class="md:hidden">
             <a @click="mobilenavOpen = !mobilenavOpen" class="h-12 w-12 flex items-center justify-center cursor-pointer hover:bg-gray-700 rounded-lg">
                 <img x-show="!mobilenavOpen" class="w-6 h-6 select-none" src="https://img.icons8.com/small/64/ffffff/menu.png"/> 
@@ -17,7 +20,7 @@
     <nav x-show="mobilenavOpen" x-cloak class="md:!block h-screen w-screen md:h-auto md:w-auto -mt-20 md:mt-0 absolute md:relative z-[-1]" style="background-color: rgb(6, 2, 63)">
         <ul class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0">
             {% if user.is_authenticated %}
-            <li><a href="{% url 'dashboard' %}">Home</a></li>
+            <li><a href="{% url 'home' %}">Home</a></li>
             <li><a href="{% url 'login' %}">Login</a></li>
             <li><a href="{% url 'register' %}">Sign Up</a></li>
             <li x-data="{ dropdownOpen: false }" class="relative">
