--- a/templates/app/create_restocks.html
+++ b/templates/app/create_restocks.html
@@ -4,7 +4,7 @@
 <body class="background-color: #f0f0f0">
     <div class="login-container">
         <form class="login-form" method="POST" action="{% url 'create_restocks' %}">
-            <h2 class="text-2xl font-bold text-center mb-6">Create Restock</h2>
+            <h2 class="text-2xl font-bold text-center mb-6">{% if form.instance.pk %}Edit{% else %}Create{% endif %} Stock</h2>
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit" class="w-full bg-blue-500 hover:bg-blue-700 text-black font-bold py-2 px-4 rounded">
