--- a/templates/app/create_staff.html
+++ b/templates/app/create_staff.html
@@ -3,8 +3,9 @@
 
 <body class="background-color: #f0f0f0">
     <div class="login-container">
+        <h1></h1>
         <form class="login-form" action="{% url 'create_staff' %}" method="POST">
-            <h2 class="text-2xl font-bold text-center mb-6">Create Staff</h2>
+            <h2 class="text-2xl font-bold text-center mb-6">{% if form.instance.pk %}Edit{% else %}Create{% endif %} Staff</h2>
             {% csrf_token %}
             {{ form.as_p }}
             <button type="submit">submit</button>
