--- a/templates/app/items.html
+++ b/templates/app/items.html
@@ -5,7 +5,7 @@
     <article class="content">
         <div class="flex items-center justify-between">
             <h2>Items</h2>
-            <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_items' %}">Create Item</a></button>
+            <button class="mb-3 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_items' %}">Create Item</a></button>
         </div>
         <table class="table-auto w-full border-collapse border border-gray-300">
             <thead>
@@ -13,6 +13,7 @@
                     <th class="border border-gray-300 px-4 py-2 text-left">Name</th>
                     <th class="border border-gray-300 px-4 py-2 text-left">Item Status</th>
                     <th class="border border-gray-300 px-4 py-2 text-left">Item Quantity</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -21,6 +22,10 @@
                     <td class="border border-gray-300 px-4 py-2">{{ item.name }}</td>
                     <td class="border border-gray-300 px-4 py-2">{{ item.item_status }}</td>
                     <td class="border border-gray-300 px-4 py-2">{{ item.quantity }}</td>
+                    <td class="border border-gray-300 px-4 py-2">
+                        <a href="{% url 'edit_items' item.id %}">Edit |</a>
+                        <a href="{% url 'delete_items' item.id %}">Delete</a>
+                    </td>
                 </tr>     
                 {% endfor %}            
             </tbody>           
