--- a/templates/app/restocks.html
+++ b/templates/app/restocks.html
@@ -5,13 +5,14 @@
     <article class="content">
         <div class="flex items-center justify-between">
             <h2>Restocks</h2>
-            <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_restocks' %}">Add stock</a></button>
+            <button class="mb-3 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_restocks' %}">Add stock</a></button>
         </div>
         <table class="table-auto w-full border-collapse border border-gray-300">
             <thead>
                 <tr>
                     <th class="border border-gray-300 px-4 py-2 text-left">Item</th>
                     <th class="border border-gray-300 px-4 py-2 text-left">Quantity</th>
+                    <th class="border border-gray-300 px-4 py-2 text-left">Action</th>
                 </tr>
             </thead>
             <tbody>
@@ -19,6 +20,10 @@
                 <tr>
                     <td class="border border-gray-300 px-4 py-2 text-left"> {{ restock.item }} </td>
                     <td class="border border-gray-300 px-4 py-2 text-left"> {{ restock.quantity }} </td>
+                    <td class="border border-gray-300 px-4 py-2">
+                        <a href="{% url 'edit_restocks' restock.id %}">Edit |</a>
+                        <a href="{% url 'delete_restocks' restock.id %}">Delete</a>
+                    </td>
                 </tr>
                 {% endfor %}
             </tbody>
