--- a/templates/app/staff.html
+++ b/templates/app/staff.html
@@ -5,7 +5,7 @@
         <article class="content">
             <div class="flex items-center justify-between">
                 <h2>Staff Details</h2>
-                <button class="mb-auto bg-blue-500 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_staff' %}">Create Staff</a></button>
+                <button class="mb-3 text-white px-4 py-2 rounded hover:bg-blue-600"><a href="{% url 'create_staff' %}">Create Staff</a></button>
             </div>
             <table class="table-auto w-full border border-gray-300">
                 <thead>
@@ -15,6 +15,7 @@
                         <th class="border border-gray-300 px-4 py-2 text-left">Email</th>
                         <th class="border border-gray-300 px-4 py-2 text-left">Phone Number</th>
                         <th class="border border-gray-300 px-4 py-2 text-left">Department</th>
+                        <th class="border border-gray-300 px-4 py-2 text-left">Action</th>
                     </tr>
                 </thead>
                 <tbody>
@@ -25,6 +26,10 @@
                         <td class="border border-gray-300 px-4 py-2">{{ staff.email }}</td>
                         <td class="border border-gray-300 px-4 py-2">{{ staff.phone_number }}</td>
                         <td class="border border-gray-300 px-4 py-2">{{ staff.department }}</td>
+                        <td class="border border-gray-300 px-4 py-2">
+                            <a href="{% url 'edit_staff' staff.id %}">Edit | </a>
+                            <a href="{% url 'delete_staff' staff.id %}">Delete</a>
+                        </td>
                     </tr>
                     {% endfor %}               
                 </tbody>           
