--- a/templates/app/home.html
+++ b/templates/app/home.html
@@ -22,8 +22,8 @@
         </div>
     </div>
 
-    <div class="text-center mb-10 mt-20">
-        <h2>Inventory Report</h2>
+    
+        <h2 class="text-center mt-10">Inventory Report</h2>
         <table class="table-auto w-full border-collapse border border-gray-300">
             <thead>
                 <tr>
@@ -42,6 +42,5 @@
                 {% endfor %}
             </tbody>
         </table>
-    </div>
 </div>
 {% endblock content %}
