--- a/templates/app/edit_restock.html
+++ b/templates/app/edit_restock.html
@@ -3,13 +3,11 @@
 
 <body class="background-color: #f0f0f0">
     <div class="login-container">
-        <form class="login-form" method="POST" action="{% url 'create_items' %}">
-            <h2 class="text-2xl font-bold text-center mb-6">{% if is_edit %}Edit Item{% else %}Create Item{% endif %}</h2>
+        <form class="login-form" method="POST" action="">
+            <h2 class="text-2xl font-bold text-center mb-6">Edit Restock</h2>
             {% csrf_token %}
             {{ form.as_p }}
-            <button type="submit"> {% if is_edit %}Update Item{% else %}Create Item{% endif %}
-        
-            </button>
+            <button type="submit">update</button>
             {% if form.errors %}
                 <p style="color:red;">{{ form.non_field_errors }}</p>
             {% endif %}
