--- a/templates/base.html
+++ b/templates/base.html
@@ -85,7 +85,6 @@
         .main {
             display: flex;
             width: 100vw;
-
         }
 
         .aside {
@@ -99,14 +98,6 @@
             background-color: rgb(20, 13, 105);
         }
 
-        .statcard {
-            background-color: rgb(67, 115, 8);
-            display: flex;
-            flex-direction: column;
-            text-align: center;
-            border-radius: 10%;
-            font-family: Arial, Helvetica, sans-serif;
-        }
         
         .statcontainer {
             display: flex;
@@ -114,15 +105,26 @@
             background-color: rgb(243 244 246 / var(--tw-bg-opacity));
             
         }
+
+        .statcard {
+            background-color: rgb(14, 141, 180);
+            display: flex;
+            flex-direction: column;
+            text-align: center;
+            border-radius: 10%;
+            font-family: Arial, Helvetica, sans-serif;
+        }
+        
         .statcard >h3 {
             border-bottom: rgb(175, 175, 199) solid 1px;
             padding: 20px;
         }
         .statcard >p {
             padding: 30px;
-            border-radius: 8%;
+            border-radius: 10%;
             background-color: rgb(15, 8, 119);
             color: white;
+            margin-bottom: auto;
         }
 
         /* .hoverlist > * {
@@ -280,26 +282,26 @@
         }
 
         .dropdown-content {
-        display: none;
-        position: absolute;
-        background-color: #f9f9f9;
-        min-width: 160px;
-        box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
-        z-index: 1;
+            display: none;
+            position: absolute;
+            background-color: #f9f9f9;
+            min-width: 160px;
+            box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
+            z-index: 1;
         }
 
         .dropdown-content a {
-        color: black;
-        padding: 12px 16px;
-        text-decoration: none;
-        display: block;
-        text-align: left;
+            color: black;
+            padding: 12px 16px;
+            text-decoration: none;
+            display: block;
+            text-align: left;
         }
 
         .dropdown-content a:hover {background-color: #f1f1f1;}
 
         .dropdown:hover .dropdown-content {
-        display: block;
+            display: block;
         }
 
         #id_tags {
