--- a/templates/includes/header.html
+++ b/templates/includes/header.html
@@ -21,8 +21,6 @@
         <ul class="flex items-center navitems flex-col md:flex-row gap-8 md:gap-0 justify-center h-full -translate-y-10 md:translate-y-0">
             {% if user.is_authenticated %}
             <li><a href="{% url 'home' %}">Home</a></li>
-            <li><a href="{% url 'login' %}">Login</a></li>
-            <li><a href="{% url 'register' %}">Sign Up</a></li>
             <li x-data="{ dropdownOpen: false }" class="relative">
                 <a @click="dropdownOpen = !dropdownOpen" @click.away="dropdownOpen = false" class="cursor-pointer select-none">
                     <img class="h-8 w-8 rounded-full object-cover" src="https://pbs.twimg.com/profile_images/508601156767997952/fFTdKUf2_400x400.jpeg"/>
@@ -33,14 +31,14 @@
                     <ul class="hoverlist">
                         <li><a href="#">My Profile</a></li>
                         <li><a href="#">Edit Profile</a></li>
-                        <li><a href="#">Log Out</a></li>
+                        <li><a href="{% url 'logout' %}">Log Out</a></li>
                         <li><a href="#">Password Reset</a></li>
                     </ul>
                 </div>
             </li>
             {% else %}
             <li><a href="{% url 'login' %}">Login</a></li>
-            <li><a href="{% url 'register' %}">Signup</a></li>
+            <li><a href="{% url 'register' %}">Sign Up</a></li>
             {% endif %}
         </ul>
     </nav>
